@@ -1,8 +1,19 @@
 use Test::Simple 'no_plan';
 
-use File::Which 'which';
+ok 1, 'Testing for deps. You may want to run this interactively.';
 
-for my $bin ( qw(convert tesseract) ){
-   ok( which($bin), "found path to '$bin'");
+deps_cli();
+
+
+sub deps_cli {
+   for my $bin ( qw(convert tesseract) ){      
+      warn("# Testing for command dep: $bin ..");
+      require File::Which;
+
+      File::Which::which($bin) or warn("# Missing path to executable: $bin")
+         and return 0;
+      ok 1,"have path to executable $bin, good.. ";
+   }
+   1;
 }
 
